--- a/Simple_Linear_Regression/student_score_prediction.ipynb
+++ b/Simple_Linear_Regression/student_score_prediction.ipynb
@@ -1345,6 +1345,7 @@
     }
    ],
    "source": [
+    "# Visualizing the scatter plot of predictor vs target\n",
     "fig = px.scatter(data, x='Hours', y='Scores', opacity=1, size=data['Hours'], color=data['Hours'])  # Adjust size as needed\n",
     "\n",
     "fig.update_layout(\n",
